<resources>
    <string name="app_name">RestoApp</string>

    <string name="tab_text_1">Promo</string>
    <string name="tab_text_2">Carta</string>
    <string name="tab_text_3">Pedidos</string>

    <!--Home Activity-->
    <string name="text_welcome">Bienvenido!</string>
    <string name="button_carta">Ver Carta</string>
    <string name="button_qrscanner">Leer ID Mesa</string>
    <string name="button_reservar">Reservar</string>

    <!--Carta Fragment-->
    <string name="selected_products">Productos Seleccionados</string>
    <string name="add_products">Agregar</string>

    <!--Adapter Products View-->
    <string name="textProductName">Name of Product</string>
    <string name="textProductDescription">Description of Product</string>
    <string name="textProductPrice">$price</string>

    <!--Navigation Drawer-->
    <string name="menu_logOut">Log Out</string>
    <string name="menu_branch_offices">Sucursales</string>
    <string name="menu_reservations">Reservas</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_history">Mi Historial</string>

    <!--Manager Activity-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Promo Fragment-->
    <string name="promo_1">TEST PROMO 1</string>
    <string name="promo_2">TEST PROMO 2</string>
    <string name="promo_3">TEST PROMO 3</string>
    <string name="promo_4">TEST PROMO 4</string>

    <!--Pedidos Fragment-->
    <string name="active_command_text">Comanda Activa</string>
    <string name="send_command_text">Enviar</string>
    <string name="sended_commands_text">Comandas Enviadas</string>

    <!--Login Activity-->
    <string name="login_title">Ingresa con tu cuenta</string>
    <string name="login_btn_text">Ingresar</string>
    <string name="login_reg_btn_text">Crear nueva cuenta</string>
    <string name="pass_hint">Contraseña</string>
    <string name="email_hint">E-Mail</string>

    <!--Register Activity-->
    <string name="reg_title">Registrate en el sistema</string>
    <string name="reg_btn_text">Crear cuenta</string>
    <string name="reg_login_text">Ya tengo una cuenta</string>
    <string name="reg_pass_text">Contraseña</string>
    <string name="reg_confirm_pass_text">Confirmar Contraseña</string>

</resources>
