<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.xgramajo.tabbedproject.ManagerActivity">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_android_black_24dp"/>
    <item
        android:id="@+id/menu_reservations"
        android:title="@string/menu_reservations"
        android:icon="@drawable/ic_android_black_24dp"/>
    <item
        android:id="@+id/menu_branch_offices"
        android:title="@string/menu_branch_offices"
        android:icon="@drawable/ic_android_black_24dp"/>
    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:icon="@drawable/ic_android_black_24dp"/>
    <item
        android:id="@+id/menu_LogOut"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/menu_logOut" />
</menu>
