<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xgramajo.tabbedproject.HomeActivity">

<TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="32dp"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_carta"
        android:layout_width="215dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/button_reservar"
        android:layout_alignStart="@+id/button_reservar"
        android:layout_marginBottom="58dp"
        android:text="@string/button_carta"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_reservar"
        android:layout_width="215dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="62dp"
        android:text="@string/button_reservar"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="215dp"
        android:layout_height="42dp"
        android:layout_above="@+id/button_carta"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:onClick="scan"
        android:text="@string/button_qrscanner" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_above="@+id/button"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="47dp"
        app:srcCompat="@drawable/cubiertos" />


</RelativeLayout>
