<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/active_command_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_command_text"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/active_command_list"/>
            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/send_command_text"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sended_commands_text"
            android:textStyle="bold"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commands_list"
            android:layout_marginBottom="55dp"/>

    </LinearLayout>
</ScrollView>